# markowitz-reference

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  experiments.py  experiments_cicd.py  markowitz.py  pyproject.toml  requirements.txt  requirements_frozen.txt  ruff.toml
.github/workflows/: basic.yml  book.yml  deptry.yml
book/: _config.yml  _toc.yml
book/docs/: index.md
book/docs/notebooks/: demo.ipynb
book/sphinx/: conf.py
cvx/markowitz/: backtest.py
data/: prices.csv  spreads.csv
experiments/: backtest.py  full_markowitz_metrics.csv  markowitz.py  playground.ipynb  playgroung.ipynb  scaling_large.py  scaling_small.py  taming.py  tuning.py  tuning_duals.py  tuning_example.py  tuning_experiments.ipynb  tuning_soft.py  tuning_utils.py  tuning_yearly_retune.py  utils.py  yearly_metrics.py
experiments/checkpoints/: equal_weights.pickle  long_only_0.10.pickle  unconstrained_0.10.pickle
experiments/results/: tuning_results.csv
experiments/tuning_results/: parameters.csv
tests/: __init__.py  conftest.py  test_builder.py  test_markowitz.py
