[tool.poetry]
name = "cvxsimulator"
version = "0.0.0"
description = "Simple simulator for investors"
authors = ["Thomas Schmelzer"]
readme = "README.md"
repository = "https://github.com/cvxgrp/simulator"
packages = [{include = "cvx"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "*"
pandas = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
yfinance = "*"
plotly = "*"
cvxpy = { git = "https://github.com/cvxpy/cvxpy", branch = "master" }
loguru = "*"

[tool.poetry.group.stubs.dependencies]
pandas-stubs = "*"

[tool.mypy]
files = ["cvx/markowitz"]
explicit_package_bases = true

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]
