[tool.poetry]
name = "cvxsimulator"
version = "0.0.0"
description = "Simple simulator for investors"
authors = ["Thomas Schmelzer"]
readme = "README.md"
repository = "https://github.com/cvxgrp/markowitz-reference"
packages = [{include = "cvx"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "*"
pandas = "*"
cvxpy = { git = "https://github.com/cvxpy/cvxpy", branch = "master" }

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]
